Edit: Fix Sidebar visibility

--- a/src/shared/components/SideBar/styles.module.css
+++ b/src/shared/components/SideBar/styles.module.css
@@ -14,59 +14,60 @@
     align-items: center;
 }
 
-.icon{
+.icon {
     transition: transform 0.5s;
     cursor: pointer;
 }
 
-.iconReverse{
+.iconReverse {
     -webkit-transform: rotateX(180deg);
     transform: rotateX(180deg);
 }
 
-.avatar{
+.avatar {
     width: 80px;
     height: 80px;
     background: #FFF;
-    display:flex;
-    align-items:center;
-    justify-content:center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 50%;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 
-.avatar img{
+.avatar img {
     width: 90%;
     height: 90%;
     border-radius: 50%;
 }
 
-.name{
+.name {
     margin-top: 12px;
     display: flex;
     align-items: center;
     gap: 6px;
 }
 
-.name span{
+.name span {
     color: #000;
-    font-size:14px;
+    font-size: 14px;
     font-weight: 600;
 }
 
-.sideBarList{
+.sideBarList {
     margin-top: 24px;
     width: 100%;
     color: #b4b4ce;
     display: flex;
     flex-direction: column;
-    gap:16px;
+    gap: 16px;
+    visibility: visible;
     opacity: 1;
-    transition: opacity 0.2s;
+    transition: visibility 0.2s, opacity 0.2s linear;
 }
 
-.hidden{
+.hidden {
+    visibility: hidden;
     opacity: 0;
 }
-
